syntax = "proto3";
package KaleidoMessage;

message IP_Area {
    // IP.Address -> IP.AreaId
    map<uint32, uint32> IPs = 1;
}

message MirrorStationGroup {
    repeated uint32 Stations = 1;
}

message Mirror {
    uint32 DefaultMirrorStationId = 1;
    // Area.id -> MirrorStation.id
    map<uint32, MirrorStationGroup> AreaToMirrorStationTable = 2;
}

// usage:
// 1. selecte the mirror by name, get its RedirectTable
// 2. get user's Area.id (find by using ip == mask+Address)
// 3. redirect to MirrorStationUrl which id == RedirectTable[Area.id]


message KaleidoMessage {
    // Mirror.name -> Mirror
    map<string, Mirror> Mirrors = 1;
    // IP.maskBitLength -> IP_Area
    map<uint32, IP_Area> IPGroups = 2;
    // MirrorStation.id -> MirrorStation.URL
    map<uint32, string> MirrorStationUrl = 3;
}